--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "framer-motion": "^10.16.4",
-    "react-player": "^2.14.1"
-  },
-  "devDependencies": {
+    "react-player": "^2.14.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
