--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,9 @@
   "theme_color": "#22c55e",
   "icons": [
     {
-      "src": "https://josanvin.github.io/josanvin/img/bioskop21.jpg",
+      "src": "https://cdn-icons-png.flaticon.com/512/2503/2503508.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ]
