feat: Update app branding and visuals
Refine the application's branding and visual identity by updating the favicon, meta tags for SEO and social sharing, and the manifest file. This includes a new app title, description, and social media image, aligning the app's presentation with its cyberpunk theme. The background gradient and orb animations have also been adjusted for a more cohesive navy and green color scheme.

--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,12 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#22c55e",
+  "theme_color": "#10b981",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2503/2503508.png",
+      "src": "https://josanvin.github.io/josanvin/img/bioskop21.jpg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     }
   ]
